# S47-0326-Danger-AngularRust-Canvora

./: .env  .env.example  Dockerfile.frontend  README.md  docker-compose.yaml  docker-compose.yml  issues.md  package.json
backend/: .env  Cargo.toml  Dockerfile  Dockerfile.backend
backend/migrations/: 001_initial_schema.sql  002_add_password_hash.sql
backend/migrations/20240101000000_initial_schema/: down.sql  up.sql
backend/src/: jwt.rs  main.rs  migrations.rs  models.rs  repository.rs  ws.rs
docs/: 01-project-init.md  02-backend-setup.md  02-mvp-scope.md  03-architecture.md  06-high-level-design.md  07-low-level-design.md  08-dev-env-config.md  09-monorepo-structure.md  10-ts-models.md  11-backend-concurrency.md  12-route-guards.md  13-whiteboard-ui-layout.md  14-build-workflow.md  15-infinite-canvas.md  16-data-binding.md  17-ui-elements.md  18-reactive-forms.md  19-validation.md  20-state-service.md  21-routing-lazy-modules.md  22-route-guards.md  23-health-endpoints.md  24-domain-models.md  25-rest-routing.md  26-event-serialization.md  27-error-handling.md  28-postgresql.md  29-migrations.md  30-crud-repository.md
frontend/: angular.json  nginx.conf
frontend/src/app/: api-config.ts  api.service.ts  app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts  auth.guard.ts  auth.interceptor.ts  auth.service.ts  board-realtime.service.ts  error-display.component.ts  error.interceptor.ts  error.service.ts  global-error-handler.ts  loading-spinner.component.ts  loading.interceptor.ts  loading.service.ts  login.module.ts  login.ts  tool-button.ts  (+4 more)
(+6 files in other folders)
